--- a/refs.bib
+++ b/refs.bib
@@ -106,8 +106,31 @@ abstract = {The 15 yr pulsar timing data set collected by the North American Nan
     primaryClass = "astro-ph.HE",
     month = "7",
     year = "2023"
+}@article{RoperPol:2019wvy,
+    author = "Roper Pol, Alberto and Mandal, Sayan and Brandenburg, Axel and Kahniashvili, Tina and Kosowsky, Arthur",
+    title = "{Numerical simulations of gravitational waves from early-universe turbulence}",
+    eprint = "1903.08585",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "NORDITA-2019-024",
+    doi = "10.1103/PhysRevD.102.083512",
+    journal = "Phys. Rev. D",
+    volume = "102",
+    number = "8",
+    pages = "083512",
+    year = "2020"
 }
-
+@article{Durrer:1997ta,
+    author = "Durrer, Ruth and Kahniashvili, Tina",
+    title = "{CMB anisotropies caused by gravitational waves: A Parameter study}",
+    eprint = "astro-ph/9702226",
+    archivePrefix = "arXiv",
+    reportNumber = "UGVA-DPT-1997-02-968",
+    journal = "Helv. Phys. Acta",
+    volume = "71",
+    pages = "445--457",
+    year = "1998"
+}
 @article{deRham:2016nuf,
     author = "de Rham, Claudia and Deskins, J. Tate and Tolley, Andrew J. and Zhou, Shuang-Yong",
     title = "{Graviton Mass Bounds}",
@@ -1391,3 +1414,15 @@ archivePrefix = {arXiv},
     pages = "095037",
     year = "2023"
 }
+
+@article{Higuchi:1986py,
+    author = "Higuchi, Atsushi",
+    title = "{Forbidden Mass Range for Spin-2 Field Theory in De Sitter Space-time}",
+    reportNumber = "YTP-86-06",
+    doi = "10.1016/0550-3213(87)90691-2",
+    journal = "Nucl. Phys. B",
+    volume = "282",
+    pages = "397--436",
+    year = "1987"
+}
+
